made project selection prettier with css

--- a/projects.html
+++ b/projects.html
@@ -33,13 +33,16 @@
 		});
 	</script>
 	<div id="header"></div>
-	<header>
-		<button onclick="changeActiveClass('All')">All</button>
-		<button onclick="changeActiveClass('PS5')">PS5</button>
-		<button onclick="changeActiveClass('UnrealEngine')">Unreal Engine</button>
-		<button onclick="changeActiveClass('Unity')">Unity</button>
-		<button onclick="changeActiveClass('OpenGL')">OpenGl</button>
-		<button onclick="changeActiveClass('AI')">AI</button>
+	<header class="selection">
+		<article>
+			<button onclick="changeActiveClass('All')">All</button>
+			<button onclick="changeActiveClass('PS5')">PS5</button>
+			<button onclick="changeActiveClass('UnrealEngine')">Unreal Engine</button>
+			<button onclick="changeActiveClass('Unity')">Unity</button>
+			<button onclick="changeActiveClass('OpenGL')">OpenGl</button>
+			<button onclick="changeActiveClass('AI')">AI</button>
+		</article>
+		
 	</header>
 	
 	<main class="projectsMain">
